<resources>
    <string name="app_name">Counting</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="number_range">Number range:</string>
    <string name="time">Time:</string>
    <string name="speed">Speed:</string>
    <string name="notification_settings">Notifications:</string>
    <string name="vibrationSettings">Vibration:</string>
    <string name="clear_data_settings">Clear statistics:</string>
    <string name="buttons_on_start_screen_settings">Buttons on start screen:</string>
    <string name="general_settings">General settings</string>
    <string name="fast_count">Fast count</string>
    <string name="sign_selection">Sign selection</string>
    <string name="delete">delete</string>
    <string name="your_answer">Your answer:</string>
    <string name="answer">answer</string>
    <string name="first_words">Thanks for installing the app. This is the first version and in the future we will improve everything. We will be grateful if you will inform us about glitches you\'ve found in the application. </string>
    <string name="sound">Sound:</string>
    <string name="number_of_comparisons">Number of comparisons:</string>
    <string name="title_activity_advertising">advertising</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
<!--    <string name="next_level">Next Level</string>-->
    <string name="result">Result:</string>
    <string name="sign_number">№</string>
    <string name="level">Level:  </string>
    <string name="cancel">cancel</string>
    <string name="time_for_notifications">Time for notifications:</string>
    <string name="simile">Simile:</string>
    <string name="range">Range:</string>
    <string name="check">check</string>
    <string name="you_don_t_have_statistics_start_playing">you don\'t have statistics start playing</string>
    <string name="start_playing">start playing</string>
    <string name="delete_data">Delete Data?</string>
    <string name="are_you_sure_you_can_t_recover_data">Are you sure? You can\'t recover data</string>
    <string name="hi_here">HI HERE</string>
    <string name="ok">Ok</string>
    <string name="wrong_text_fc">you are wrong</string>
    <string name="correct_answer_fc">correct answer: </string>
    <string name="right_text_fc">you are right</string>
    <string name="can_you_count_quickly">Can you count quickly?</string>
    <string name="time_to_practise_math">Time to practise math</string>
    <string name="can_you_figure_it_out">Can you figure it out?</string>
    <string name="rate_us">Rate us</string>
    <string name="solve_the_equation">Solve the equation!</string>
    <string name="subscribe_us">subscribe us</string>
    <string name="fast_count_start">fast count</string>
    <string name="sign_selection_start">sign selection</string>
    <string name="language">Language:</string>
    <string name="change_language">Change language</string>
    <string name="restart_text">The application should be restarted to change the language</string>
    <string name="close">close</string>
</resources>
