<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/your_answer"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="numberSigned|number"
        android:textColorHint="#6BB8C5" />

    <Button
        android:id="@+id/checkAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_buttons_style"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:text="@string/check" />

</LinearLayout>