<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firstpage"
    android:id="@+id/layout"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/buttonsstyle"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonsstyle"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/statistics"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonsstyle"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <ImageButton
        android:id="@+id/stars"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_round_stars"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stars" />

<!--    <ImageButton-->
<!--        android:id="@+id/food"-->
<!--        android:layout_width="55dp"-->
<!--        android:layout_height="55dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginBottom="25dp"-->
<!--        android:background="@drawable/button_round_stars"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/stars"-->
<!--        app:srcCompat="@drawable/food" />-->
    <!--        app:layout_constraintStart_toEndOf="@+id/food"     в кнопку инстграмм-->


    <ImageButton
        android:id="@+id/instagram"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_round_stars"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stars"
        app:srcCompat="@drawable/instagram_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>